--- a/sample/res/menu/main.xml
+++ b/sample/res/menu/main.xml
@@ -1,22 +1,9 @@
-<!--
-  Copyright 2013 The Android Open Source Project
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="101"
+        android:showAsAction="never"
+        android:title="About"/>
 
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  -->
-
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_websearch"
-          android:icon="@drawable/action_search"
-          android:title="@string/action_websearch"
-          android:showAsAction="ifRoom|withText" />
 </menu>
